# string-algebra-test-task

./: CMakeLists.txt  Main.cpp  Palindromes.cpp  Palindromes.h  README.md
